--- a/work.html
+++ b/work.html
@@ -1,5 +1,6 @@
 
 
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -70,10 +71,10 @@
           <div class="text-center">
             <h1 class="h2">001 : Face recognition website</h1>
           </div>
-          <p>The expected release date is 01/02/2020</p>
+          <p>The expected release date is 01/02/2020 <br>This website analysis the images and then detects if there's a face in it or not.. it's currently under development so i will not upload it until it's complete..</p>
 
           <blockquote>
-            <p>This website analysis the images and then detects if there's a face in it or not.. it's currently under development so i will not upload it until it's complete..</p>
+            
             <small class="pull-right">Stay Tuned..-</small>
           </blockquote>
         </div>
