--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
           <li><a href="./works.html" title="">02 : Personal Projects</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./Haniismail.pdf" title="">05 : My Cv</a></li>
+          <li><a href="./HaniIsmail.pdf" title="">05 : My Cv</a></li>
 
         </ul>
 
