--- a/about.html
+++ b/about.html
@@ -1,7 +1,5 @@
-
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible">
@@ -9,23 +7,16 @@
   <meta content="description" name="description">
   <meta name="google" content="notranslate" />
   <meta content="Mashup templates have been developped by Orson.io team" name="author">
-
-  <!-- Disable tap highlight on IE -->
   <meta name="msapplication-tap-highlight" content="no">
-  
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
-
   <title>About Me</title>  
-
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
-
 <body class="">
 <div id="site-border-left"></div>
 <div id="site-border-right"></div>
 <div id="site-border-top"></div>
 <div id="site-border-bottom"></div>
- <!-- Add your content of header -->
 <header>
   <nav class="navbar  navbar-fixed-top navbar-default">
     <div class="container">
@@ -35,7 +26,6 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
@@ -44,13 +34,10 @@
           <li><a href="./contact.html" title="">04 : Contact</a></li>
           <li><a href="./HaniIsmail.pdf" title="">05 : My CV</a></li>
         </ul>
-
-
       </div> 
     </div>
   </nav>
 </header>
-
 <div class="section-container">
     <div class="container">
       <div class="row">
@@ -58,7 +45,6 @@
           <div class="section-container-spacer text-center">
             <h1 class="h2">03 : About me</h1>
           </div>
-          
           <div class="row">
             <div class="col-md-10 col-md-offset-1">
               <div class="row">
@@ -78,7 +64,6 @@
       </div>
     </div>
   </div>
-
   <footer class="footer-container text-center">
     <div class="container">
       <div class="row">
@@ -88,26 +73,11 @@
       </div>
     </div>
   </footer>
-
 <script>
   document.addEventListener("DOMContentLoaded", function (event) {
      navActivePage();
   });
 </script>
-
-<!-- Google Analytics: change UA-XXXXX-X to be your site's ID 
-
-<script>
-  (function (i, s, o, g, r, a, m) {
-    i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-      (i[r].q = i[r].q || []).push(arguments)
-    }, i[r].l = 1 * new Date(); a = s.createElement(o),
-      m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
-  })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
-  ga('create', 'UA-XXXXX-X', 'auto');
-  ga('send', 'pageview');
-</script>
-
---> <script type="text/javascript" src="./main.70a66962.js"></script></body>
+<script type="text/javascript" src="./main.70a66962.js"></script></body>
 
 </html>
