--- a/contact.html
+++ b/contact.html
@@ -113,7 +113,7 @@
                               <a href="https://twitter.com/Hanismail_" title="" class="fa-icon">
                                 <i class="fa fa-twitter"></i>
                               </a>
-                              <a href="https://www.linkedin.com/in/m26y4u/" title="" class="fa-icon">
+                              <a href="www.linkedin.com/in/hanismail" title="" class="fa-icon">
                                 <i class="fa fa-linkedin"></i>
                               </a>
                               <a href="https://www.medium.com/@haniismailone" title="" class="fa-icon">
