--- a/contact.html
+++ b/contact.html
@@ -107,19 +107,19 @@
                                 </li>
                               </ul>
                               <h3>Follow me on social networks</h3>
-                              <a href="https://www.facebook.com/Duu.Miel" title="" class="fa-icon">
+                              <a href="https://www.facebook.com/Duu.Miel" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-facebook"></i>
                               </a>
-                              <a href="https://twitter.com/Hanismail_" title="" class="fa-icon">
+                              <a href="https://twitter.com/Hanismail_" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-twitter"></i>
                               </a>
-                              <a href="www.linkedin.com/in/hanismail" title="" class="fa-icon">
+                              <a href="www.linkedin.com/in/hanismail" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-linkedin"></i>
                               </a>
-                              <a href="https://www.medium.com/@haniismailone" title="" class="fa-icon">
+                              <a href="https://www.medium.com/@haniismailone" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-medium"></i>
                               </a>
-                              <a href="https://www.instagram.com/itshanismail" title="" class="fa-icon">
+                              <a href="https://www.instagram.com/itshanismail" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-instagram"></i>
                               </a>
                             </div>
