--- a/contact.html
+++ b/contact.html
@@ -113,10 +113,10 @@
                               <a href="https://twitter.com/Hanismail_" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-twitter"></i>
                               </a>
-                              <a href="www.linkedin.com/in/hanismail" target="_blank" title="" class="fa-icon">
+                              <a href="https://linkedin.com/in/hanismail" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-linkedin"></i>
                               </a>
-                              <a href="https://www.medium.com/@haniismailone" target="_blank" title="" class="fa-icon">
+                              <a href="https://www.medium.com/@haniismail" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-medium"></i>
                               </a>
                               <a href="https://www.instagram.com/itshanismail" target="_blank" title="" class="fa-icon">
