--- a/about.html
+++ b/about.html
@@ -32,7 +32,8 @@
           <li><a href="./works.html" title="">02 : Personal Projects</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./HaniIsmail.pdf" title="">05 : My CV</a></li>
+          <li><a href="./Blog.html" title="">05: My Blog</a><li></li>
+          <li><a href="./HaniIsmail.pdf" title="">06: My CV</a><li>
         </ul>
       </div> 
     </div>
