--- a/Personal Projects.html
+++ b/Personal Projects.html
@@ -29,10 +29,11 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Personal Projects</a></li>
+          <li><a href="./Personal Projects.html" title="">02 : Personal Projects</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./HaniIsmail.pdf" title="">05: My CV</a><li>
+          <li><a href="./Blog.html" title="">05: My Blog</a><li></li>
+          <li><a href="./HaniIsmail.pdf" title="">06: My CV</a><li>
         </ul>
       </div> 
     </div>
