--- a/work.html
+++ b/work.html
@@ -29,18 +29,19 @@
       <div class="collapse navbar-collapse" id="navbar-collapse">
         <ul class="nav navbar-nav ">
           <li><a href="./index.html" title="">01 : Home</a></li>
-          <li><a href="./works.html" title="">02 : Personal Projects</a></li>
+          <li><a href="./Personal Projects.html" title="">02 : Personal Projects</a></li>
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
-          <li><a href="./HaniIsmail.pdf" title="">05 : My CV</a></li>
+          <li><a href="./Blog.html" title="">05: My Blog</a><li></li>
+          <li><a href="./HaniIsmail.pdf" title="">06: My CV</a><li>
         </ul>
           <ul class="nav navbar-nav navbar-right navbar-small visible-md visible-lg">
             <li><a href="./work.html" title="" class="active">001</a></li>
-            <li><a href="./works.html" title="">002</a></li>
-            <li><a href="./works.html" title="">003</a></li>
-            <li><a href="./works.html" title="">004</a></li>
-            <li><a href="./works.html" title="">005</a></li>
-            <li><a href="./works.html" title="">006</a></li>
+            <li><a href="./Personal Projects.html" title="">002</a></li>
+            <li><a href="./Personal Projects.html" title="">003</a></li>
+            <li><a href="./Personal Projects.html" title="">004</a></li>
+            <li><a href="./Personal Projects.html" title="">005</a></li>
+            <li><a href="./Personal Projects.html" title="">006</a></li>
           </ul>
       </div> 
     </div>
