--- a/Blog.html
+++ b/Blog.html
@@ -33,7 +33,7 @@
           <li><a href="./about.html" title="">03 : About me</a></li>
           <li><a href="./contact.html" title="">04 : Contact</a></li>
           <li><a href="./Blog.html" title="">05: My Blog</a><li></li>
-          <li><a href="./HaniIsmail.pdf" title="">06: My CV</a><li>
+          <li><a href="./HaniIsmail.pdf" title=""target="_blank">06: My CV</a><li>
         </ul>
       </div> 
     </div>
