--- a/contact.html
+++ b/contact.html
@@ -105,7 +105,7 @@
                                   <span class="fa-icon">
                                     <i class="fa fa fa-map-marker" aria-hidden="true"></i>
                                   </span>
-                                  4011 Sousse, Tunisia
+                                  Sousse, Tunisia
                                 </li>
                               </ul>
                               <h3>Follow me on social networks</h3>
@@ -124,6 +124,10 @@
                               <a href="https://www.instagram.com/itshanismail" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-instagram"></i>
                               </a>
+                              <a href="https://github.com/Haniismail" target="_blank" title="" class="fa-icon">
+                                <i class="fa fa-github"></i>
+                                <a href="mailto:EmailOfHaniIsmail@gmail.com" target="_blank" title="" class="fa-icon">
+                                  <i class="fa fa-envelope"></i>
                             </div>
                           </div>
                         </form>
@@ -144,76 +148,3 @@
     </div>
   </nav>
 </header>
-<div class="section-container">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <div class="section-container-spacer text-center">
-            <h1 class="h2">04 : Contact me</h1>
-          </div> 
-          <div class="row">
-            <div class="col-md-10 col-md-offset-1">
-               <form action="" class="reveal-content">
-                  <div class="row">
-                    <div class="col-md-5 address-container">
-                      <ul class="list-unstyled">
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-phone" aria-hidden="true"></i>
-                          </span>
-                             + 216 23 878 321
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa-at" aria-hidden="true"></i>
-                          </span>
-                          emailofhaniismail@gmail.com
-                        </li>
-                        <li>
-                          <span class="fa-icon">
-                            <i class="fa fa fa-map-marker" aria-hidden="true"></i>
-                          </span>
-                          4011 Sousse, Tunisia
-                        </li>
-                      </ul>
-                      <h3>Follow me on social networks</h3>
-                      <a href="https://www.facebook.com/Duu.Miel" title="" class="fa-icon">
-                        <i class="fa fa-facebook"></i>
-                      </a>
-                      <a href="https://twitter.com/Hanismail_" title="" class="fa-icon">
-                        <i class="fa fa-twitter"></i>
-                      </a>
-                      <a href="https://www.linkedin.com/in/m26y4u/" title="" class="fa-icon">
-                        <i class="fa fa-linkedin"></i>
-                      </a>
-                      <a href="https://www.medium.com/@haniismailone" title="" class="fa-icon">
-                        <i class="fa fa-medium"></i>
-                      </a>
-                      <a href="https://www.instagram.com/itshanismail" title="" class="fa-icon">
-                        <i class="fa fa-instagram"></i>
-                      </a>
-                    </div>
-                  </div>
-                </form>
-            </div>
-          </div>
-      </div>
-      </div>
-    </div>
-  </div>
-<footer class="footer-container text-center">
-    <div class="container">
-      <div class="row">
-        <div class="col-xs-12">
-          <p>© Hani Ismail 2020 </p>
-        </div>
-      </div>
-    </div>
-  </footer>
-<script>
-  document.addEventListener("DOMContentLoaded", function (event) {
-     navActivePage();
-  });
-</script>
-<script type="text/javascript" src="./main.70a66962.js"></script></body>
-</html>
