--- a/Blog.html
+++ b/Blog.html
@@ -69,9 +69,9 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <h3>Not yet</h3>
-                        <p>still waiting for the next big idea..</p>
-                        <div  class="btn btn-default">Coming soon..</div>
+                        <<h3>Why Node.Js is overstepping PHP</h3>
+                        <p>a comprehensive demonstration on why Node.Js is the future of Back-end web development</p>
+                        <a href="https://medium.com/@haniismail/5-ways-node-js-is-killing-php-f94be0ab6e89" target="_blank" title="" class="btn btn-default">Take me there</a>
                       </div>
                     </div>
                     <div class="col-sm-4">
