--- a/Blog.html
+++ b/Blog.html
@@ -69,7 +69,7 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>002/006</h4>
-                        <<h3>Why Node.Js is overstepping PHP</h3>
+                        <h3>Why Node.Js is overstepping PHP</h3>
                         <p>a comprehensive demonstration on why Node.Js is the future of Back-end web development</p>
                         <a href="https://medium.com/@haniismail/5-ways-node-js-is-killing-php-f94be0ab6e89" target="_blank" title="" class="btn btn-default">Take me there</a>
                       </div>
