--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                   <p> I am always looking for opportunities that presents new challenges because i believe tht's exactly what makes a person grow both personally and of course in groups as well..</p>
                 </div>
                 <div class="col-xs-12 col-md-6">
-                  <img src="./assets/images/Hani.jpg" class="img-responsive" alt="">
+                  <img src="./assets/images/Haniismail.jpg" class="img-responsive" alt=""/>
                 </div>
               </div>
             </div>
