--- a/Blog.html
+++ b/Blog.html
@@ -118,7 +118,7 @@
                       </a>
                       <div class="card-container">
                         <h4>006/006</h4>
-                        <h3>Not yet/h3>
+                        <h3>Not yet/<h3>
                         <p>why the hurry ?..</p>
                         <div  class="btn btn-default">Coming soon..</div>
                       </div>
