--- a/Blog.html
+++ b/Blog.html
@@ -80,9 +80,9 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>003/006</h4>
-                        <h3>Not yet</h3>
-                        <p>still waiting for the next big idea..</p>
-                        <div  class="btn btn-default">Coming soon..</div>
+                        <h3>How Kaizen + Smart predicting are the deadly combo in IT industry ?</h3>
+                        <p>A vision on how choosing a clear and promising field in IT early can change carreers..</p>
+                        <a href="https://medium.com/@haniismail/how-kaizen-smart-predicting-are-the-deadly-combo-in-it-industry-789e27fd0ff4" target="_blank" title="" class="btn btn-default">Take me there</a>
                       </div>
                     </div>
                 </div>
