--- a/Blog.html
+++ b/Blog.html
@@ -95,9 +95,9 @@
                     </a>
                     <div class="card-container">
                       <h4>004/006</h4>
-                      <h3>Not yet</h3>
-                      <p>still waiting for the next big idea..</p>
-                      <div  class="btn btn-default">Coming soon..</div>
+                        <h3>How to make the most out of your internship</h3>
+                        <p>A comprehensive tips on how to benefit the most from your summer intern (not CS students exclusive)</p>
+                        <a href="https://medium.com/@haniismail/how-to-make-the-most-out-of-your-internship-7fe7998d7897" target="_blank" title="" class="btn btn-default">Take me there</a>
                     </div>
                   </div>
                    <div class="col-sm-4">
