--- a/work.html
+++ b/work.html
@@ -55,7 +55,7 @@
           <div class="text-center">
             <h1 class="h2">001 : Face recognition website</h1>
           </div>
-          <p>The expected release date is 14/02/2020 <br>This website analysis the images and then detects if there's a face in it or not.. it's currently under development so i will not upload it until it's complete..</p>
+          <p>The expected release date is 14/02/2021 <br>An API powered website that detects faces the project is set to be a part of a grand website regarding the face identification technology</p>
           <blockquote>
             <small class="pull-right">Stay Tuned..-</small>
           </blockquote>
