--- a/contact.html
+++ b/contact.html
@@ -83,7 +83,7 @@
                               <a href="https://www.medium.com/@haniismail" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-medium"></i>
                               </a>
-                              <a href="https://www.instagram.com/itshanismail" target="_blank" title="" class="fa-icon">
+                              <a href="https://www.instagram.com/_hanismail__/" target="_blank" title="" class="fa-icon">
                                 <i class="fa fa-instagram"></i>
                               </a>
                               <a href="https://github.com/Haniismail" target="_blank" title="" class="fa-icon">
