--- a/Personal Projects.html
+++ b/Personal Projects.html
@@ -137,7 +137,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© Hani Ismail 2020 </p>
+        <p> Hani Ismail 2021 </p>
       </div>
     </div>
   </div>
