--- a/Personal Projects.html
+++ b/Personal Projects.html
@@ -58,8 +58,8 @@
                       </a>
                       <div class="card-container card-container-lg">
                         <h4>001/006</h4>
-                        <h3>Face recognition website<br>(under development..)</h3>
-                        <p>As the title suggests this website uses some magic technologies to recognize faces on pictures</p>
+                        <h3>Reyta the Twitter bot</h3>
+                        <p>A Python scripte powered bot that uses the Twitter API to implement some functions such as automatically follow back,like and retweet the tweets of its followers and following</p>
                         <a href="./work.html" title="" class="btn btn-default">Take me there</a>
                       </div>
                     </div>
