--- a/work.html
+++ b/work.html
@@ -9,7 +9,7 @@
   <meta name="msapplication-tap-highlight" content="no">
   <link rel="apple-touch-icon" sizes="180x180" href="./assets/apple-icon-180x180.png">
   <link href="./assets/favicon.ico" rel="icon">
-  <title>Face Detection Website</title>  
+  <title>Reyta the Twitter bot</title>  
 <link href="./main.3f6952e4.css" rel="stylesheet"></head>
 <body class="">
 <div id="site-border-left"></div>
@@ -53,16 +53,16 @@
         <img src="./assets/images/work001-01.jpg" class="img-responsive" alt="">
         <div class="card-container">
           <div class="text-center">
-            <h1 class="h2">001 : Face recognition website</h1>
+            <h1 class="h2">001 : Reyta the Twitter bot</h1>
           </div>
-          <p>The expected release date is 14/02/2021 <br>An API powered website that detects faces the project is set to be a part of a grand website regarding the face identification technology</p>
+          <p>Released on 20-01-2021<br>Reyta is a bot developed using the Twitter API and Tweepy API it does a variety of functions such as Retweet and like all tweets in the feed without exceeding the limit set by twitter as well as following back every user that follows Reyta.<br>Reyta is set to be further developed to extend its features to Instagram</p>
           <blockquote>
-            <small class="pull-right">Stay Tuned..-</small>
+            <small class="pull-right"> <a href="https://twitter.com/ReytaBot" title="" class="btn btn-default">Take me to Reyta !</a></small>
           </blockquote>
         </div>
       </div>
       <div class="col-xs-12">
-        <img src="./assets/images/work001.jpg" class="img-responsive" alt="">
+        
       </div>
     </div>
   </div>
@@ -71,7 +71,7 @@
   <div class="container">
     <div class="row">
       <div class="col-xs-12">
-        <p>© 2020 | Hani Ismail</p>
+        <p>© 2021 | Hani Ismail</p>
       </div>
     </div>
   </div>
